# asuka

./: .gitignore  Cargo.toml
asuka-core/: Cargo.toml
asuka-core/src/: attention.rs  lib.rs  mod.rs
asuka-core/src/clients/: discord.rs  github.rs  mod.rs  telegram.rs  twitter.rs
asuka-core/src/knowledge/: mod.rs  models.rs  store.rs  types.rs
asuka-core/src/loaders/: mod.rs  site.rs
asuka-starknet/: Cargo.toml
examples/src/: main.rs
