[workspace]
members = ["asuka-core", "asuka-starknet", "examples"]
resolver = "2"

[workspace.dependencies]
rig-core = { git = "https://github.com/0xPlaygrounds/rig", rev = "8ef09fc", default-features = false, features = [
    "derive",
] }
rig-sqlite = { git = "https://github.com/0xPlaygrounds/rig", rev = "8ef09fc", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0.9"
tokio-rusqlite = { version = "0.6.0", features = ["bundled"] }
